Fix footer overlapping the body on small screens

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -19,6 +19,12 @@ body {
   background-color: #f5f5f5;
 }
 
+@media (max-width: 500px) {
+  body {
+    margin-bottom: 150px;
+  }
+}
+
 .container .text-muted {
   margin: 15px 0;
   font-size: 95%;
